# PARIS

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  gen_version.sh  nvcc.args
cmake/Modules/: FindFFTW.cmake
doc/: schaum.geo
src/: .gitignore  CMakeLists.txt  Image.h  ImageHandler.h  InputSide.h  Master.h  OutputSide.h  Pipeline.h  Queue.h  SinkStage.h  SourceStage.h  Stage.h  Task.h  Worker.h  backend.h  backprojection.cpp  backprojection.h  ddbvf.cpp  ddbvf.h  device_to_host_stage.cpp  device_to_host_stage.h  exception.h  filesystem.cpp  filesystem.h  filter_stage.cpp  filter_stage.cu  filter_stage.h  filtering.cpp  filtering.h  geometry.cpp  geometry.h  geometry_calculator.cpp  geometry_calculator.h  his.cpp  his.h  his_loader.cpp  his_loader.h  loader.cpp  loader.h  main.cpp  (+43 more)
src/ImageHandlerPolicies/: TIFFHandler.cpp  TIFFHandler.h
src/common/: Filesystem.cpp  Filesystem.h  Geometry.h  Queue.h
src/cuda/: CUDAAssert.h  CUDACommon.cu  CUDACommon.h  CUDADeleter.cu  CUDADeleter.h  CUDADeviceAllocator.cu  CUDADeviceAllocator.h  CUDADeviceAllocator2D.h  CUDADeviceDeleter.cu  CUDADeviceDeleter.h  CUDAFeldkamp.cu  CUDAFeldkamp.h  CUDAFeldkampScheduler.h  CUDAFilter.cu  CUDAFilter.h  CUDAHostAllocator.cu  CUDAHostAllocator.h  CUDAHostDeleter.cu  CUDAHostDeleter.h  CUDAImage.h  CUDAMaster.cu  CUDAMaster.h  CUDATask.cu  CUDATask.h  CUDAToStdImage.cu  CUDAToStdImage.h  CUDAWeighting.cu  CUDAWeighting.h  CUDAWorker.cu  CUDAWorker.h  Feldkamp.cu  Feldkamp.h  FeldkampScheduler.cpp  FeldkampScheduler.h  Filter.cu  Filter.h  Preloader.cu  Preloader.h  ToHostImage.cu  ToHostImage.h  (+17 more)
src/generic/: backend.h
src/image/: .gitignore  Image.h  ImageHandler.h  ImageLoader.h  ImageSaver.h  StdImage.h
src/image/handlers/: TIFF.cpp  TIFF.h
src/image/handlers/HIS/: HIS.cpp  HIS.h
src/image/handlers/TIFF/: TIFF.cpp  TIFF.h
src/image/implementations/: TIFF.cpp  TIFFHandler.h
src/image/loaders/: HIS.h  HISHeader.h
src/image/savers/: TIFF.h
src/master_worker/: Master.h  Task.h  Worker.h
src/openmp/: backend.h  backprojection.cpp  filtering.cpp  memory.cpp  reconstruction.cpp  subvolume_information.cpp  weighting.cpp
src/pipeline/: InputSide.h  OutputSide.h  Pipeline.h  Port.h  SinkStage.h  SourceStage.h  Stage.h
